# MyIsland

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs
crates/myisland-plugin-api/: Cargo.toml
crates/myisland-plugin-api/src/: lib.rs
crates/myisland-plugin-api/src/packager/: manifest.rs  mod.rs  packaging.rs  signing.rs
docs/: launch-douyin.md  launch-xiaohongshu.md  xiaohongshu-cover-card.md
resources/in_app/lang/: en.lang  zh.lang
src/: main.rs
src/core/: audio.rs  config.rs  i18n.rs  lyrics.rs  mod.rs  persistence.rs  render.rs  smtc.rs  water_reminder.rs
src/icons/: arrows.rs  controls.rs  mod.rs  music.rs  settings.rs
src/plugin/: loader.rs  manager.rs  mod.rs  types.rs  zip_loader.rs
src/ui/expanded/: mod.rs  music_view.rs  widget_view.rs
src/utils/: anim.rs  autostart.rs  backdrop.rs  color.rs  font.rs  glass.rs  liquid_glass.rs  logger.rs  mod.rs  mouse.rs  physics.rs  scroll.rs  win32.rs
src/utils/settings_ui/: anim.rs  input.rs  items.rs  mod.rs  renderer.rs
src/window/: app.rs  mod.rs  tray.rs
src/window/settings/: input.rs  mod.rs
