[package]
name = "MyIsland"
version = "1.0.0"
edition = "2024"

[workspace]
members = ["crates/myisland-plugin-api"]

[dependencies]
cpal = "0.15"
realfft = "3.3"
bytemuck = "1.25.0"
skia-safe = "0.93.1"
softbuffer = "0.4.8"
tray-icon = "0.19"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_Security", "Media_Control", "Foundation", "Foundation_Collections", "Storage_Streams", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Variant", "Win32_Globalization", "Win32_UI_Shell", "UI_Notifications", "Data_Xml_Dom"] }
winit = "0.30"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
open = "5.3"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
rfd = "0.17.2"
once_cell = "1.19"
libloading = "0.9"
log = "0.4"
env_logger = "0.11"
myisland-plugin-api = { path = "crates/myisland-plugin-api" }
zip = "2"
serde_yaml = "0.9"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
